gccida/c1/compute_forward_dependences
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1839:4: error: expected ';' after expression
rtx v3; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1839:5: error: use of undeclared identifier 'v3'
rtx v3; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1841:4: error: expected ';' after expression
rtx v5; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1841:5: error: use of undeclared identifier 'v5'
rtx v5; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1842:4: error: expected ';' after expression
rtx v6; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1842:5: error: use of undeclared identifier 'v6'
rtx v6; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1843:4: error: expected ';' after expression
rtx v7; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1843:5: error: use of undeclared identifier 'v7'
rtx v7; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1848:1: error: use of undeclared identifier 'v3'
v3 = head; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1851:27: error: use of undeclared identifier 'v3'
if ( rtx_class[*( _WORD *)v3] == 105 ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1853:1: error: use of undeclared identifier 'v3'
v3 = group_leader( v3); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1853:20: error: use of undeclared identifier 'v3'
v3 = group_leader( v3); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1854:21: error: use of undeclared identifier 'v3'
for ( i = ( __int64)v3[3]; i; i = *( _QWORD *)( i + 16) ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1856:1: error: use of undeclared identifier 'v5'
v5 = group_leader( *( rtx *)( i + 8)); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1856:28: error: expected expression
v5 = group_leader( *( rtx *)( i + 8)); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1857:20: error: expected expression
if ( v5 == *( rtx *)( i + 8) ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1857:6: error: use of undeclared identifier 'v5'
if ( v5 == *( rtx *)( i + 8) ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1859:1: error: use of undeclared identifier 'v6'
v6 = v5; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/sched-deps.c:1859:6: error: use of undeclared identifier 'v5'
v6 = v5; 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_forward_dependences/src/obj/sched-deps.o] Error 1
